--- a/dev/scss/_base.scss
+++ b/dev/scss/_base.scss
@@ -1,5 +1,5 @@
 body {
-    font: 400 20px/30px "Graphik LCG", Arial, Helvetica, sans-serif;
+    font: 400 20px/30px "Roboto", Arial, Helvetica, sans-serif;
     color: #000;
 }
 
@@ -9,7 +9,7 @@ body {
 }
 
 .container {
-    max-width: 1320px;
+    max-width: 1400px;
     padding: 0 20px;
     margin: 0 auto;
 }
@@ -18,4 +18,8 @@ img {
     vertical-align: top;
     max-width: 100%;
     height: auto;
+}
+
+a {
+    text-decoration: none;
 }
