--- a/dev/scss/_fonts.scss
+++ b/dev/scss/_fonts.scss
@@ -1,17 +1,1 @@
-@font-face {
-    font-family: "Graphik LCG";
-    src: url("../fonts/") format("woff2"),
-        url("../fonts/GraphikLCG-Regular.woff") format("woff");
-    font-weight: 400;
-    font-style: normal;
-    font-display: swap;
-}
-
-@font-face {
-    font-family: "Graphik LCG";
-    src: url("../fonts/GraphikLCG-Semibold.woff2") format("woff2"),
-        url("../fonts/GraphikLCG-Semibold.woff") format("woff");
-    font-weight: 600;
-    font-style: normal;
-    font-display: swap;
-}
+@import url('https://fonts.googleapis.com/css2?family=Open+Sans&family=Roboto&family=Yellowtail&display=swap');
