--- a/dev/scss/components/_price.scss
+++ b/dev/scss/components/_price.scss
@@ -1,14 +1,19 @@
 .price {
+    margin: 0 -10px;
     &__item {
         font-size: 17px;
         font-weight: 400;
         line-height: 32px;
         letter-spacing: 0.36000001430511475px;
         color: $accent;
+        padding: 10px;
 
         &--transparent {
             color: $transparent;
             text-decoration: line-through;
+        }
+        &:hover {
+            color: $card-hover;
         }
     } 
 }
