--- a/dev/scss/components/_cards.scss
+++ b/dev/scss/components/_cards.scss
@@ -8,6 +8,7 @@
         background: #F9F8F8;
         margin: 10px;
         width: calc(100% / 3 - 20px);
+        border-radius: 38px;
         &__sub-title {
             display: inline-block;
             background: $accent;
